refactor styling part 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="primary-container">
+    <app-header></app-header>
+    <div class="primary-content">
+        <router-outlet></router-outlet>
+    </div>
+    <app-footer></app-footer>
+</div>
