--- a/src/app/components/main/execution-panel/execution-panel.component.html
+++ b/src/app/components/main/execution-panel/execution-panel.component.html
@@ -6,12 +6,18 @@
     <div class="button" *ngIf="!simComplete">
         <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     </div>
+    <div class="centered"><strong>Segment Status</strong></div>
     <app-segment-status-list></app-segment-status-list>
     <div>
         <div *ngIf="simComplete && simStatus !== 'FAILED'">
             <div class="button ready" (click)="gotoOutput()">Examine Output</div>
-            <div class="button ready" (click)="downloadSimResults()"
-                [class.disabled]="simComplete && simStatus == 'COMPLETED'">Download Data</div>
+            <div
+                class="button ready"
+                (click)="downloadSimResults()"
+                [class.disabled]="simComplete && simStatus == 'COMPLETED'"
+            >
+                Download Data
+            </div>
 
             <div *ngIf="downloading" class="centered">Preparing .zip file for download</div>
             <div class="button" *ngIf="waiting">
