--- a/src/app/components/output/about-output/about-output.component.css
+++ b/src/app/components/output/about-output/about-output.component.css
@@ -15,8 +15,6 @@ ul {
     display: grid;
     grid-template-rows: 1fr auto;
     box-sizing: border-box;
-    height: 100%;
-    width: 100%;
     padding: 5px;
     background-color: var(--main-color);
 }
@@ -32,14 +30,16 @@ ul {
     padding: 10px;
 }
 
-table , p{
+table,
+p {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 80%;
-  }
-  
-  td, th {
+}
+
+td,
+th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-  }
+}
