--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -1,74 +1,32 @@
-body {
-    height: 100vh;
-    display: grid;
-    grid-template-rows: auto auto 1fr auto;
-    background-color: var(--main-epa);
-}
-
-app-footer {
-    text-align: center;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.task-bar {
-    width: 95%;
-    margin: 0 auto 5px auto;
+.nav-bar {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    width: 100%;
 }
 
-.row-left {
-    display: flex;
-    flex-direction: row;
-}
-
-.row-right {
-    display: flex;
-    flex-direction: row;
-}
-
-.back {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: x-large;
-}
-
-.segment-status {
-    margin: 0 1px 0 1px;
-}
-
-.add {
-    transform: scale(1.3);
-    color: rgba(0, 0, 0, 0.54);
-}
-
-/*****************/
 .output-panels {
     display: flex;
-    flex-wrap: wrap;
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
     column-gap: 0.25rem;
     row-gap: 0.25rem;
-    background-color: darkgreen;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 }
 
 .output-panel {
-    flex: 1 1 33%;
+    position: relative;
+    flex: 1 0 5rem;
+    min-width: 400px;
+    border: 1px solid var(--main-border);
 }
 
 .output-panel-controls {
     position: absolute;
-    right: 0px;
+    top: 0.25rem;
+    right: 0.25rem;
     display: grid;
     grid-template-columns: auto auto;
+    z-index: 99;
 }
 
 .output-panel-remove,
@@ -82,12 +40,12 @@ ul {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+/* still need to put this stuff back on the dashboard I guess*/
 .left-panel {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
     width: 200px;
-    height: 100%;
     padding: 5px 0;
 }
 
@@ -95,25 +53,12 @@ ul {
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    height: 100%;
     padding: 5px;
     background-color: var(--main-color);
 }
 
 .left-panel button {
     width: 100%;
-}
-
-.list-container {
-    margin: 10px 0;
-    overflow-y: auto;
-    flex: 1;
-}
-
-.map-container {
-    height: 100%;
-    width: 100%;
-    flex: 1;
 }
 
 .chevron {
