--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -1,18 +1,13 @@
-.container {
-    display: grid;
-    grid-template-rows: 1fr auto;
-    border: 1px solid var(--main-border);
-    background-color: lightpink;
+.plot-container {
+    position: relative;
+    height: 100%;
 }
 
 .plot-menu {
     position: absolute;
-    top: 24px;
-    left: 0;
+    top: 5px;
+    left: 5px;
     z-index: 10;
-}
-
-.plot-menu-field {
 }
 
 .mat-form-field-ripple {
