--- a/src/app/components/output/plot-container/plot-container.component.html
+++ b/src/app/components/output/plot-container/plot-container.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="plot-container">
     <div class="plot-menu">
         <mat-icon
             class="plot-menu-icon"
