--- a/src/app/components/output/plotly/plotly.component.html
+++ b/src/app/components/output/plotly/plotly.component.html
@@ -1,5 +1,5 @@
-<div id="plot" #plot style="width: 100%; height: 100%;"></div>
-<mat-icon matTooltip="Show/Hide legend." matTooltipPosition="before" class="toggle-button"
+<div id="plot" #plot style="width: 100%; height: 100%"></div>
+<!-- <mat-icon matTooltip="Show/Hide legend." matTooltipPosition="before" class="toggle-button"
     (click)="toggleLegend($event)">
     {{showLegend ? "chevron_right" : "chevron_left"}}
-</mat-icon>
+</mat-icon> -->
