--- a/src/app/components/output/table-container/table-container.component.css
+++ b/src/app/components/output/table-container/table-container.component.css
@@ -1,4 +1,4 @@
 .table-container {
-    background-color: lightgreen;
-    border: 1px solid var(--main-border);
+    position: relative;
+    height: 100%;
 }
