--- a/src/styles.css
+++ b/src/styles.css
@@ -180,6 +180,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 ::-webkit-scrollbar {
     width: 10px;
+    height: 10px;
 }
 
 ::-webkit-scrollbar-track {
