--- a/src/app/components/output/output.component.css
+++ b/src/app/components/output/output.component.css
@@ -1,23 +1,29 @@
+.primary-content {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    border: 1px solid var(--main-border);
+}
+
 .nav-bar {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    background-color: var(--main-epa);
+    padding: 0.25rem;
 }
 
 .output-panels {
     display: flex;
-    column-gap: 0.25rem;
-    row-gap: 0.25rem;
     flex-wrap: wrap;
-    width: 100%;
-    height: 100%;
+    padding: 0.25rem;
+    row-gap: 0.25rem;
+    column-gap: 0.25rem;
 }
 
 .output-panel {
     position: relative;
     flex: 1 0 5rem;
     min-width: 400px;
-    border: 1px solid var(--main-border);
+    outline: 1px solid var(--main-border);
 }
 
 .output-panel-controls {
