--- a/src/app/components/output/table/table.component.css
+++ b/src/app/components/output/table/table.component.css
@@ -9,16 +9,15 @@
     height: 100%;
 }
 
-.table-header {
-    position: sticky;
-    top: -1px;
-    background-color: yellow;
-}
-
 table {
     text-align: center;
     border-collapse: collapse;
     overflow-x: auto;
+}
+
+th {
+    position: sticky;
+    top: 0px;
 }
 
 th,
@@ -28,7 +27,10 @@ td {
     white-space: nowrap;
     text-align: center;
     vertical-align: middle;
-    border: 1px solid #ddd;
+}
+
+td {
+    border: 1px solid var(--main-border);
 }
 
 .table-controls {
