--- a/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
+++ b/src/app/components/ui/expansion-panel-left/expansion-panel-left.component.html
@@ -2,12 +2,16 @@
     <div class="panel-left-container" *ngIf="open && !showAbout">
         <div class="panel-left-open">
             <div class="form-row">
-                <div class="segment-status" (click)="backToHMS()">Back to HMS</div>
-                <div class="segment-status" (click)="aboutAQT()">About</div>
+                <div class="button-flat" (click)="backToHMS()">Back to HMS</div>
+                <div class="button-flat" (click)="aboutAQT()">About</div>
             </div>
             <div (click)="closePanel()">
-                <mat-icon class="icon-panel-toggle collapse-icon-left" matTooltip="Hide Simulation Interface"
-                    [matTooltipPosition]="tooltipPosition">chevron_left</mat-icon>
+                <mat-icon
+                    class="icon-panel-toggle collapse-icon-left"
+                    matTooltip="Hide Simulation Interface"
+                    [matTooltipPosition]="tooltipPosition"
+                    >chevron_left</mat-icon
+                >
             </div>
         </div>
         <app-input></app-input>
@@ -15,12 +19,16 @@
     <div *ngIf="!open && !showAbout">
         <div class="panel-left-closed">
             <div class="form-row">
-                <div class="segment-status" (click)="backToHMS()">Back to HMS</div>
-                <div class="segment-status" (click)="aboutAQT()">About</div>
+                <div class="button-flat" (click)="backToHMS()">Back to HMS</div>
+                <div class="button-flat" (click)="aboutAQT()">About</div>
             </div>
             <div (click)="openPanel()">
-                <mat-icon class="icon-panel-toggle collapse-icon-left" matTooltip="Show Simulation Interface"
-                    [matTooltipPosition]="tooltipPosition">chevron_right</mat-icon>
+                <mat-icon
+                    class="icon-panel-toggle collapse-icon-left"
+                    matTooltip="Show Simulation Interface"
+                    [matTooltipPosition]="tooltipPosition"
+                    >chevron_right</mat-icon
+                >
             </div>
         </div>
     </div>
