more output layout work

--- a/src/app/components/output/output-panel/output-panel.component.css
+++ b/src/app/components/output/output-panel/output-panel.component.css
@@ -7,7 +7,7 @@
 
 .output-panel-controls {
     height: 24px;
-    padding: 3px;
+    padding: 0.25rem;
     display: flex;
     vertical-align: middle;
     background-color: var(--main-epa);
