--- a/src/app/components/output/plot-container/plot-container.component.html
+++ b/src/app/components/output/plot-container/plot-container.component.html
@@ -3,7 +3,7 @@
         <mat-icon
             class="plot-menu-icon"
             [matMenuTriggerFor]="menu"
-            matTooltip="Open plot menu."
+            matTooltip="Open plot menu"
             matTooltipPosition="after"
             >menu</mat-icon
         >
