--- a/src/app/components/output/plotly/plotly.component.html
+++ b/src/app/components/output/plotly/plotly.component.html
@@ -3,3 +3,4 @@
     (click)="toggleLegend($event)">
     {{showLegend ? "chevron_right" : "chevron_left"}}
 </mat-icon> -->
+<mat-icon class="plot-legend-icon" matTooltip="Open plot legend" matTooltipPosition="before">menu</mat-icon>
