--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -4,23 +4,24 @@
     inset: 0;
     width: 500px;
     height: var(--main-max-panel-height);
-    padding-left: .25rem;
-    padding-right: .25rem;
-    padding-bottom: .25rem;
-    margin-right: .25rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
+    padding-bottom: 0.25rem;
+    margin-right: 0.25rem;
     overflow-y: scroll;
     background-color: var(--main-color);
 }
 
 .control {
-    padding: .25rem;
+    padding: 0.25rem;
 }
 
-table, td {
+table,
+td {
     border: 1px solid var(--main-border);
 }
 
-.container-item { 
+.container-item {
     min-height: 0;
     height: 100%;
     padding: 0;
