--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -1,102 +1,79 @@
 <div class="primary-content">
-    <div class="nav-bar">
-        <div class="button-flat" (click)="back()" matTooltip="Go back to simulation.">
-            <mat-icon>chevron_left</mat-icon>
-        </div>
-        <div
-            class="button-flat"
-            (click)="aboutAQT()"
-            matTooltip="About the Simulation Output Dashboard"
-            matTooltipPosition="after"
-        >
-            About
-        </div>
-        <div
-            class="button-flat"
-            (click)="addContainer()"
-            matTooltip="Add a new container to the dashboard."
-            matTooltipPosition="after"
-        >
-            <mat-icon>add</mat-icon>
-        </div>
-    </div>
-    <!-- <app-about-output *ngIf="showAbout" (closeMe)="aboutAQT()"></app-about-output> -->
-    <!--<div [ngClass]="showLeftPanel ? 'left-panel' : 'hide'">
-            <div class="left-panel-container">
-                <div>
-                    <label>Select All</label>
-                    <input ng-model="toggleAllCatchments" type="checkbox" id="show-all" (change)="toggleAll()" />
-                    <mat-icon
-                        matTooltip="Close Catchment Panel."
-                        matTooltipPosition="after"
-                        class="toggle-button"
-                        (click)="togglePanel()"
-                        class="chevron"
-                    >
-                        chevron_left
-                    </mat-icon>
+    <div class="output-panel">
+        <div class="nav-bar">
+            <div class="nav-controls-left">
+                <div class="button-flat" (click)="back()" matTooltip="Go back to simulation" matTooltipPosition="after">
+                    <mat-icon>chevron_left</mat-icon>
                 </div>
-                <div class="list-container">
-                    <ul>
-                        <li *ngFor="let catchment of catchments">
-                            <button
-                                [ngClass]="catchment.selected ? 'active' : ''"
-                                (click)="catchmentClick(catchment)"
-                                (mouseover)="catchmentMouseOn(catchment)"
-                                (mouseout)="catchmentMouseOut(catchment)"
-                            >
-                                {{
-                                    catchment.catchment == pourPoint
-                                        ? catchment.catchment + " (Pour
-                                Point)"
-                                        : catchment.catchment
-                                }}
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-                <div class="map-container">
-                    <app-mini-map></app-mini-map>
-                </div>
-            </div>
-        </div>
-     <mat-icon
-            *ngIf="!showLeftPanel"
-            matTooltip="Open Catchment Panel."
-            matTooltipPosition="after"
-            class="toggle-button"
-            (click)="togglePanel()"
-            class="chevron"
-        >
-            chevron_right
-        </mat-icon> -->
-    <div
-        class="output-panels"
-        cdkDropList
-        cdkDropListOrientation="horizontal"
-        [cdkDropListData]="outputPanels"
-        (cdkDropListDropped)="dropContainer($event)"
-    >
-        <div #drag class="output-panel" *ngFor="let outputPanel of outputPanels; let i = index" cdkDrag>
-            <div class="output-panel-controls">
                 <div
-                    class="output-panel-remove"
-                    (click)="removeContainer(i)"
-                    matTooltip="Click to remove container."
+                    class="button-flat"
+                    (click)="toggleAbout()"
+                    matTooltip="About the Simulation Output Dashboard"
                     matTooltipPosition="after"
                 >
-                    <mat-icon>clear</mat-icon>
-                </div>
-                <div
-                    class="output-panel-drag-handle"
-                    cdkDragHandle
-                    matTooltip="Click and hold to drag container."
-                    matTooltipPosition="before"
-                >
-                    <mat-icon>open_with</mat-icon>
+                    About
                 </div>
             </div>
-            <app-output-panel [panelType]="outputPanel.type"></app-output-panel>
+
+            <div class="nav-controls-center">
+                <div>{{ simName || "simulaiton name is unknown" }}</div>
+            </div>
+
+            <div class="nav-controls-right">
+                <div>
+                    <div class="button-flat comid-menu-button" aria-label="Comid menu" (click)="toggleComidMenu()">
+                        Comid Menu
+                    </div>
+                    <div class="comid-menu" [hidden]="comidMenuHidden">
+                        <div class="button-flat" (click)="selectSegment('all')">Select All</div>
+                        <div class="button-flat" (click)="selectSegment('all')">Remove All</div>
+                        <div class="button-flat" (click)="selectSegment('all')">Pour Point</div>
+                        <div class="button-flat" (click)="selectSegment('all')">comid pp-1</div>
+                        <div class="button-flat" (click)="selectSegment('all')">comid pp-2</div>
+                        <div class="button-flat" (click)="selectSegment('all')">comid pp-3</div>
+                        <div class="button-flat" (click)="selectSegment('all')">comid pp-4</div>
+                        <div class="button-flat" (click)="selectSegment('all')">comid pp-5</div>
+                    </div>
+                </div>
+                <div
+                    class="button-flat"
+                    (click)="addContainer()"
+                    matTooltip="Add container to dashboard"
+                    matTooltipPosition="after"
+                >
+                    <mat-icon>add</mat-icon>
+                </div>
+            </div>
+        </div>
+        <app-about-output [hidden]="aboutHidden" (closeMe)="toggleAbout()"></app-about-output>
+        <div
+            class="output-panels"
+            cdkDropList
+            cdkDropListOrientation="horizontal"
+            [cdkDropListData]="outputPanels"
+            (cdkDropListDropped)="dropContainer($event)"
+        >
+            <div #drag class="output-panel" *ngFor="let outputPanel of outputPanels; let i = index" cdkDrag>
+                <div class="output-panel-controls">
+                    <div
+                        class="output-panel-remove"
+                        (click)="removeContainer(i)"
+                        matTooltip="Click to remove container"
+                        matTooltipPosition="after"
+                    >
+                        <mat-icon>clear</mat-icon>
+                    </div>
+                    <div
+                        class="output-panel-drag-handle"
+                        cdkDragHandle
+                        matTooltip="Click and hold to drag container"
+                        matTooltipPosition="before"
+                    >
+                        <mat-icon>open_with</mat-icon>
+                    </div>
+                </div>
+                <app-output-panel [panelType]="outputPanel.type"></app-output-panel>
+            </div>
         </div>
     </div>
 </div>
