--- a/src/app/components/output/plot-container/plot-container.component.css
+++ b/src/app/components/output/plot-container/plot-container.component.css
@@ -5,8 +5,8 @@
 
 .plot-menu {
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 0.25rem;
+    left: 0.25rem;
     z-index: 10;
 }
 
