--- a/src/app/components/output/about-output/about-output.component.css
+++ b/src/app/components/output/about-output/about-output.component.css
@@ -1,45 +1,20 @@
-:host {
-    overflow: hidden;
-}
-
-a {
-    text-decoration: none;
-    color: #000;
-}
-
-ul {
-    list-style: none;
-}
-
 .container {
-    display: grid;
-    grid-template-rows: 1fr auto;
-    box-sizing: border-box;
-    padding: 5px;
     background-color: var(--main-color);
+    position: absolute;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    height: 95.5%;
 }
 
 .about-section {
-    overflow-y: auto;
-}
-
-.about-bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-}
-
-table,
-p {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 80%;
+    padding: 1rem;
+    overflow: auto;
 }
 
 td,
 th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 0.5rem;
 }
