add fluid-height directive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="primary-container">
     <app-header></app-header>
-    <div class="primary-content">
+    <div class="primary-content" [fluidHeight]>
         <router-outlet></router-outlet>
     </div>
     <app-footer></app-footer>
