--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div class="primary-container">
+<body>
     <app-header></app-header>
-    <div class="primary-content" [fluidHeight]>
-        <router-outlet></router-outlet>
-    </div>
+    <main [fluidHeight]><router-outlet></router-outlet></main>
     <app-footer></app-footer>
-</div>
+</body>
