--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div id="footer-banner">
     <div class="footer-block">
-        <a href="https://www.epa.gov" class="footer-epa-logo-link" target="_blank" aria-label="EPA homepage link"><span
-                class="footer-epa-logo"></span></a>
+        <a href="https://www.epa.gov" class="footer-epa-logo-link" target="_blank" aria-label="EPA homepage link"
+            ><span class="footer-epa-logo"></span
+        ></a>
     </div>
     <div class="footer-title-block">
         <button mat-button [matMenuTriggerFor]="discover" class="footer-title">Discover</button>
@@ -11,20 +12,23 @@
             <button mat-menu-item class="footer-link" (click)="linksClick('budget')">Budget & Performance</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('contracting')">Contracting</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('grants')">Grants</button>
-            <button mat-menu-item class="footer-link" (click)="linksClick('snapshot')">January 19, 2017 Web
-                Snapshot</button>
+            <button mat-menu-item class="footer-link" (click)="linksClick('snapshot')">
+                January 19, 2017 Web Snapshot
+            </button>
             <button mat-menu-item class="footer-link" (click)="linksClick('nofear')">No FEAR Act Data</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('privacy')">Privacy</button>
-            <button mat-menu-item class="footer-link" (click)="linksClick('privacynotice')">Privacy and Security
-                Notice</button>
+            <button mat-menu-item class="footer-link" (click)="linksClick('privacynotice')">
+                Privacy and Security Notice
+            </button>
         </mat-menu>
     </div>
     <div class="footer-title-block">
         <button mat-button [matMenuTriggerFor]="connect" class="footer-title">Connect</button>
         <mat-menu #connect="matMenu" class="footer-link-block">
             <button mat-menu-item class="footer-link" (click)="linksClick('data')">Data.gov</button>
-            <button mat-menu-item class="footer-link" (click)="linksClick('inspectorgeneral')">Inspector
-                General</button>
+            <button mat-menu-item class="footer-link" (click)="linksClick('inspectorgeneral')">
+                Inspector General
+            </button>
             <button mat-menu-item class="footer-link" (click)="linksClick('jobs')">Jobs</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('news')">Newsroom</button>
             <button mat-menu-item class="footer-link" (click)="linksClick('opengov')">Open Government</button>
