--- a/src/app/components/output/output-panel/output-panel.component.css
+++ b/src/app/components/output/output-panel/output-panel.component.css
@@ -21,7 +21,7 @@ app-plot-container,
 app-table-container,
 app-map-container,
 app-list-container {
-    height: 331px;
+    height: 100%;
 }
 
 app-table-container {
