--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,13 @@
-.primary-container {
-    height: 100vh;
+body {
     display: grid;
     grid-template-rows: auto 1fr auto;
+    height: 100vh;
 }
 
-.primary-content {
+main {
     background: var(--main-background);
-    overflow-y: hidden;
+}
+
+app-footer {
+    text-align: center;
 }
