--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,6 @@
-@media screen and (min-width:980px)
-{
+@media screen and (min-width: 980px) {
     .footer-banner {
-        padding: 0 10%;   
+        padding: 0 10%;
     }
     .footer-block {
         padding-left: 5%;
@@ -18,10 +17,9 @@
         height: 60px;
     }
 }
-@media screen and (max-width: 979px) and (min-width: 500px)
-{
+@media screen and (max-width: 979px) and (min-width: 500px) {
     .footer-banner {
-        padding: 0 10%;   
+        padding: 0 10%;
     }
     .footer-block {
         padding-left: 5%;
@@ -39,8 +37,7 @@
         height: 50px;
     }
 }
-@media screen and (max-width: 499px)
-{
+@media screen and (max-width: 499px) {
     .footer-banner {
         padding: 0;
     }
@@ -62,10 +59,12 @@
 #footer-banner {
     background: var(--main-epa);
     display: flex;
+    height: 75px;
 }
 .footer-block {
     display: flex;
     justify-content: center;
+    align-content: center;
     height: 100%;
     width: 20%;
 }
@@ -76,11 +75,10 @@
     position: relative;
     height: 85%;
     width: 85%;
-    margin: .25rem;
+    margin: 0.25rem;
 }
 .footer-epa-logo-link {
     text-decoration: none;
-    
 }
 .footer-epa-logo-link:active {
     border: none;
@@ -97,7 +95,7 @@
 .footer-title {
     color: white;
     font-weight: 700;
-    font-family: Merriweather,Georgia,Cambria,"Times New Roman",Times,serif;
+    font-family: Merriweather, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 .footer-title:active {
     box-shadow: none;
@@ -119,7 +117,7 @@
     font-size: 88.2353%;
     font-weight: 700;
     line-height: 1.2;
-    font-family: Merriweather,Georgia,Cambria,"Times New Roman",Times,serif;
+    font-family: Merriweather, Georgia, Cambria, "Times New Roman", Times, serif;
     border: none;
     background: transparent;
     box-shadow: none;
@@ -136,18 +134,23 @@
     color: #323a45 !important;
     opacity: 0.7;
 }
-.social-facebook, .social-facebook:hover {
-    background: url('../../../assets/images/epa_icons_Facebook.svg') no-repeat;
+.social-facebook,
+.social-facebook:hover {
+    background: url("../../../assets/images/epa_icons_Facebook.svg") no-repeat;
 }
-.social-flickr, .social-flickr:hover {
-    background: url('../../../assets/images/epa_icons_Flickr.svg') no-repeat;
+.social-flickr,
+.social-flickr:hover {
+    background: url("../../../assets/images/epa_icons_Flickr.svg") no-repeat;
 }
-.social-instagram, .social-instagram:hover {
-    background: url('../../../assets/images/epa_icons_Instagram.svg') no-repeat;
+.social-instagram,
+.social-instagram:hover {
+    background: url("../../../assets/images/epa_icons_Instagram.svg") no-repeat;
 }
-.social-twitter, .social-twitter:hover {
-    background: url('../../../assets/images/epa_icons_Twitter.svg') no-repeat;
+.social-twitter,
+.social-twitter:hover {
+    background: url("../../../assets/images/epa_icons_Twitter.svg") no-repeat;
 }
-.social-youtube, .social-youtube:hover {
-    background: url('../../../assets/images/epa_icons_YouTube.svg') no-repeat;
+.social-youtube,
+.social-youtube:hover {
+    background: url("../../../assets/images/epa_icons_YouTube.svg") no-repeat;
 }
