vertical align footer logo

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -61,8 +61,8 @@
     display: flex;
     height: 75px;
 }
-.footer-block {
-    display: flex;
+.footer-block-logo {
+    display: grid;
     justify-content: center;
     align-content: center;
     height: 100%;
