--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div id="footer-banner">
-    <div class="footer-block">
+    <div class="footer-block-logo">
         <a href="https://www.epa.gov" class="footer-epa-logo-link" target="_blank" aria-label="EPA homepage link"
-            ><span class="footer-epa-logo"></span
+            ><div class="footer-epa-logo"></div
         ></a>
     </div>
     <div class="footer-title-block">
